modules/gdscript/tests/scripts/parser/errors/immutable_static_member_no_assignment.gd
static let value : float

func test():
	pass
